--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br><br>
     <div class="accordion">
 <button type="button" class="accordion__button">Lake Nakuru National Park</button>
-<div class="accordion__content"><br><img class="pics" src="./cover2.jpg" alt=""><img class="pics" src="./nak1.jpg" alt=""><img class="pics" src="./nak2.jpg" alt=""><p>Located near Nakuru town on the floor of The Great Rift Valley, this park surrounds Lake Nakuru. It is best known for its thousands of flamingoes which nest along the shores of Lake Nakuru. The surface of the shallow lake is hardly recognizable due to the continually shifting mass of pink. The best vantage point is from <em>Baboon Cliff.</em>Also of interest is an area of 188km around the lake fenced off as a sanctuary to protect giraffes as well as both black and white rhinos. Other animals that can be found here are waterbucks, lions,pythons, cheetahs,leopards and over 400 bird species. The park marches for 12.1km on the south eastern boundary with Soysambu conservancy which is the only remaining wildlife corridor to Lake Naivasha.</p></div>
+<div class="accordion__content"><br><img class="pics" src="./cover2.jpg" alt=""><img class="pics" id="backgpic" src="./nak1.jpg" alt=""><img class="pics" src="./nak2.jpg" alt=""><p>Located near Nakuru town on the floor of The Great Rift Valley, this park surrounds Lake Nakuru. It is best known for its thousands of flamingoes which nest along the shores of Lake Nakuru. The surface of the shallow lake is hardly recognizable due to the continually shifting mass of pink. The best vantage point is from <em>Baboon Cliff.</em>Also of interest is an area of 188km around the lake fenced off as a sanctuary to protect giraffes as well as both black and white rhinos. Other animals that can be found here are waterbucks, lions,pythons, cheetahs,leopards and over 400 bird species. The park marches for 12.1km on the south eastern boundary with Soysambu conservancy which is the only remaining wildlife corridor to Lake Naivasha.</p></div>
     </div>
 <br>
         <div class="accordion">
@@ -84,7 +84,7 @@
         <br>
         <footer id="footer">
             <h3>Parrot Developers</h3>
-            <p id="footertext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maiores odit corrupti eligendi. Mollitia rem neque sunt. Exercitationem fuga modi amet delectus quae, nemo ipsum eaque, assumenda praesentium recusandae consequatur tempora aspernatur, temporibus eligendi dolore nostrum? Assumenda voluptatum voluptate, officia consectetur natus aut veniam aliquid dignissimos sapiente rerum! Rem, obcaecati!</p>
+            <p id="footertext">This website has been develoed by Parrot Delopers. Contact us via our email parrotdevelopers254@gmail.com and get feedback within 48 working ours. </p>
             <div class="footer-bottom">
                 <p>copyright &copy;2021 <a href="#">parrot developers</a></p>
             </div>
