--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <br>
         <footer id="footer">
             <h3>Parrot Developers</h3>
-            <p id="footertext">This website has been develoed by Parrot Delopers. Contact us via our email parrotdevelopers254@gmail.com and get feedback within 48 working ours. </p>
+            <p id="footertext">This website has been developed by Parrot Developers. Contact us via our email parrotdevelopers254@gmail.com and get feedback within 48 working ours. </p>
             <div class="footer-bottom">
                 <p>copyright &copy;2021 <a href="#">parrot developers</a></p>
             </div>
